implement queryblockinfo
