# application/docs/swagger.yaml
@@ -134,13 +134,13 @@ definitions:
     type: object
 info:
   contact:
-    email: zoujh99@qq.com
-    name: 夜央 Oh oh oh oh oh oh
+    email: 1390167880@qq.com
+    name: fmy
   description: 基于区块链技术的房地产交易系统api文档
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  title: 基于区块链技术的房地产交易系统api文档
+  title: 基于区块链技术的农产品溯源系统api文档
   version: "1.0"
 paths:
   /api/v1/createDonating:
@@ -227,6 +227,20 @@ paths:
           schema:
             $ref: '#/definitions/app.Response'
       summary: 买家购买
+  /api/v1/getBlockInfo:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 输出blockInfo
   /api/v1/hello:
     get:
       produces:
